# sysent

./: .gitignore  CMakeLists.txt  README.md  emscripten_build.bat  emscripten_build.sh  main.cpp
include/: sysent.h
include/sysent/: EntitiesList.h  EntitiesList.inl  Entity.h  Entity.inl  EntityIndex.h  EntityManager.h  EntityManager.inl  EntityTypeCtx.h  EntityTypeInfo.h  EntityTypeInfo.inl  FlaggedSystem.h  FlaggedSystem.inl  Mask.h  Masks.h  RolesComposition.h  RolesComposition.inl  RolesMask.h  System.h  System.inl  SystemAll.h  SystemBase.h  SystemBase.inl  SystemFlagged.h  SystemFlagged.inl  SystemManager.h  SystemManager.inl  SystemManager_internal.h  SystemPipeline.h  SystemPos.h  sysent_config.h
src/: sysent.h
src/setup/: entity_props.h  entity_roles.h  systems.h
src/sysent/: defs.h  sysent_setup.h
src/sysent/types/: Entity.h  EntityManager.h  EntityProps.h  EntityRoles.h  EntityTypes.h  RolesMask.h  System.h  SystemManager.h  SystemManager.inl  SystemManager_internal.h  SystemTypes.h
src/types/: Entity.h  EntityManager.h  System.h  SystemManager.h  SystemManager.inl  SystemManager_internal.h
test/: entities.h  entx_example.h  main.cpp
test/setup/: entities.h  entity_types.h  system_types.h  systems.h
test/sysent_setup/: entities.h  entity_props.def  entity_roles.def  systems.h
